# rust-wasm

./: .gitignore  README.md
pure-rust/: Cargo.toml  Justfile  example.html  example.js
pure-rust/.cargo/: config.toml
pure-rust/src/: lib.rs
rust-polymorphism/: Cargo.toml  Justfile  index.html  index.js
rust-polymorphism/src/: lib.rs
rust-wasm-bindgen/: Cargo.toml  Justfile  index.html  index.js
rust-wasm-bindgen/src/: lib.rs
wasm/: Justfile  example.html  example.js  example.wat
wasm-exports/: example.html  example.js  example.wat
